--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,12 @@
 .navbar{
-
+    width: 100%;
+    height: 60px;
+    background-color: lightgray;
+    position:fixed;  
+    z-index: 1;
+    top: 0;
 }
-
+/* 
 .nav-wrapper{
 
 }
@@ -12,4 +17,4 @@
 
 .nav-right{
     
-}
+} */
